import { ListChargesResponse } from "../generated/proto.web";

export const mockCharges : ListChargesResponse.SuccessModel.ChargeModel[] = [{
    type : ListChargesResponse.SuccessModel.ChargeModel.CHARGE_TYPE.PACK_BOUGHT,
    date : '01/25/2021',
    bytes : {
        value : '104857600'
    },
    total : '7'
},{
    type : ListChargesResponse.SuccessModel.ChargeModel.CHARGE_TYPE.PACK_BOUGHT,
    date : '08/19/2020',
    bytes : {
        value : '104857600'
    },
    total : '7'
},{
    type : ListChargesResponse.SuccessModel.ChargeModel.CHARGE_TYPE.PACK_BOUGHT,
    date : '06/10/2021',
    bytes : {
        value : '1073741824'
    },
    total : '13.31'
},{
    type : ListChargesResponse.SuccessModel.ChargeModel.CHARGE_TYPE.PACK_BOUGHT,
    date : '01/11/2020',
    bytes : {
        value : '5368709120'
    },
    total : '1.5'
},{
    type : ListChargesResponse.SuccessModel.ChargeModel.CHARGE_TYPE.PACK_BOUGHT,
    date : '01/25/2021',
    bytes : {
        value : '104857600'
    },
    total : '58.88'
},
{
    type : ListChargesResponse.SuccessModel.ChargeModel.CHARGE_TYPE.PACK_BOUGHT,
    date : '01/15/2020',
    bytes : {
        value : '524288000'
    },
    total : '7'
},{
    type : ListChargesResponse.SuccessModel.ChargeModel.CHARGE_TYPE.PACK_BOUGHT,
    date : '08/20/2020',
    bytes : {
        value : '104857600'
    },
    total : '1.5'
},{
    type : ListChargesResponse.SuccessModel.ChargeModel.CHARGE_TYPE.PACK_BOUGHT,
    date : '01/15/2021',
    bytes : {
        value : '104857600'
    },
    total : '13.31'
},{
    type : ListChargesResponse.SuccessModel.ChargeModel.CHARGE_TYPE.PACK_BOUGHT,
    date : '11/05/2020',
    bytes : {
        value : '5368709120'
    },
    total : '58.88'
},{
    type : ListChargesResponse.SuccessModel.ChargeModel.CHARGE_TYPE.PACK_BOUGHT,
    date : '01/25/2021',
    bytes : {
        value : '524288000'
    },
    total : '7'
},{
    type : ListChargesResponse.SuccessModel.ChargeModel.CHARGE_TYPE.PACK_BOUGHT,
    date : '01/25/2021',
    bytes : {
        value : '524288000'
    },
    total : '7'
},{
    type : ListChargesResponse.SuccessModel.ChargeModel.CHARGE_TYPE.PACK_BOUGHT,
    date : '08/20/2020',
    bytes : {
        value : '104857600'
    },
    total : '1.5'
},{
    type : ListChargesResponse.SuccessModel.ChargeModel.CHARGE_TYPE.PACK_BOUGHT,
    date : '01/25/2021',
    bytes : {
        value : '1073741824'
    },
    total : '13.31'
},{
    type : ListChargesResponse.SuccessModel.ChargeModel.CHARGE_TYPE.PACK_BOUGHT,
    date : '11/05/2020',
    bytes : {
        value : '5368709120'
    },
    total : '58.88'
},{
    type : ListChargesResponse.SuccessModel.ChargeModel.CHARGE_TYPE.ADD_FUNDS,
    date : '01/25/2021',
    bytes : {
        value : '524288000'
    },
    total : '7'
},{
    type : ListChargesResponse.SuccessModel.ChargeModel.CHARGE_TYPE.ADD_FUNDS,
    date : '01/25/2021',
    bytes : {
        value : '104857600'
    },
    total : '7'
},{
    type : ListChargesResponse.SuccessModel.ChargeModel.CHARGE_TYPE.ADD_FUNDS,
    date : '08/20/2020',
    bytes : {
        value : '104857600'
    },
    total : '1.5'
},{
    type : ListChargesResponse.SuccessModel.ChargeModel.CHARGE_TYPE.ADD_FUNDS,
    date : '01/25/2021',
    bytes : {
        value : '524288000'
    },
    total : '13.31'
},{
    type : ListChargesResponse.SuccessModel.ChargeModel.CHARGE_TYPE.ADD_FUNDS,
    date : '11/05/2020',
    bytes : {
        value : '104857600'
    },
    total : '58.88'
},{
    
    type : ListChargesResponse.SuccessModel.ChargeModel.CHARGE_TYPE.ADD_FUNDS,
    date : '01/25/2021',
    bytes : {
        value : '5368709120'
    },
    total : '7'
},{
    type : ListChargesResponse.SuccessModel.ChargeModel.CHARGE_TYPE.ADD_FUNDS,
    date : '11/05/2020',
    bytes : {
        value : '5368709120'
    },
    total : '58.88'
},{
    
    type : ListChargesResponse.SuccessModel.ChargeModel.CHARGE_TYPE.ADD_FUNDS,
    date : '01/25/2021',
    bytes : {
        value : '524288000'
    },
    total : '7'
}]
